# Python-API-Framework

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt
app/: main.py
app/core/: file_models.py  generic_client.py  rich_error.py  runner.py  server.py
app/ghl/: client.py
app/ghl/associations/: api.py  models.py
app/ghl/business/: api.py  models.py
app/ghl/forms/: api.py  models.py
app/ghl/object_schema/: note.txt  object_schema.py
app/ghl/objects/: api.py  models.py
app/ghl/relations/: api.py  models.py
app/ghl/sub_account/: api.py
app/servers/: vehicle_logs_server.py
app/workflows/: template.py  vehicle_log_submitted.py  vehicle_service_log_submitted.py
src/api/gohighlevel/: api_client.py  associations.py  business.py  forms.py  messages.py  object_schema.py  objects.py  relations.py  sub_account.py
src/api/xero/: api_client.py
src/api_framework/: __init__.py
src/api_framework/core/: generic_client.py
src/api_framework/utils/: __init__.py  model_validations.py
src/core/: generic_client.py
src/models/gohighlevel/: business.py  forms.py  messages.py  objects.py
src/utils/: deep_freeze.py  rich_error.py
tests/: conftest.py
tests/common/: generic_api_tests.py  generic_model_tests.py
tests/gohighlevel/: conftest.py
tests/gohighlevel/api_client/: test_ghl_client.py
tests/gohighlevel/estimates/: conftest.py  test_ghl_estimates_api.py  test_ghl_estimates_models.py
tests/gohighlevel/objects/: conftest.py  test_ghl_objects_api.py  test_ghl_objects_models.py
tests/servicem8/: conftest.py
(+44 files in other folders)
