[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-framework"
version = "0.1.0"
description = "Custom Api Framework"
requires-python = ">=3.13.3"

dependencies = [
    "flask",
    "pydantic",
    "requests",
    "pillow",
    "Jinja2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "api_framework",
    "api_framework.*"
]